--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,11 @@ dependencies:
     sdk: flutter
   flutter_blue_plus: ^1.32.4
   hooks_riverpod: ^2.5.1
+  csv: ^6.0.0
+  path_provider: ^2.1.3
+  intl: ^0.19.0 
+  permission_handler: ^11.3.1
+  flutter_file_dialog: ^3.0.2
   
 dev_dependencies:
   flutter_test:
