--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.19.0 
   permission_handler: ^11.3.1
   flutter_file_dialog: ^3.0.2
+  shimmer: ^3.0.0  
   
 dev_dependencies:
   flutter_test:
