--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_file_dialog: ^3.0.2
   shimmer: ^3.0.0  
+  flutter_hooks: ^0.20.5
   
 dev_dependencies:
   flutter_test:
