--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "pressureruvvi",
-    "short_name": "pressureruvvi",
+    "name": "pressureruuvi",
+    "short_name": "pressureruuvi",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
