--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: pressureruvvi
+name: pressureruuvi
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -18,6 +18,7 @@ dependencies:
   flutter_file_dialog: ^3.0.2
   shimmer: ^3.0.0  
   flutter_hooks: ^0.20.5
+  flutter_svg: ^2.0.10+1
   
 dev_dependencies:
   flutter_test:
@@ -26,3 +27,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
