--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   shimmer: ^3.0.0  
   flutter_hooks: ^0.20.5
   flutter_svg: ^2.0.10+1
+  loading_animation_widget: ^1.2.1
+  stop_watch_timer: ^3.1.1  
   
 dev_dependencies:
   flutter_test:
